[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/CoinHUD.gd" type="Script" id=1]
[ext_resource path="res://asset/items/item330.png" type="Texture" id=2]
[ext_resource path="res://asset/items/item328.png" type="Texture" id=3]
[ext_resource path="res://asset/items/item326.png" type="Texture" id=4]

[node name="CoinHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
custom_constants/separation = 15

[node name="BlueRow" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 30.0
custom_constants/separation = 5

[node name="BlueIcon" type="TextureRect" parent="HBoxContainer/BlueRow"]
margin_right = 24.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="BlueLabel" type="Label" parent="HBoxContainer/BlueRow"]
margin_left = 29.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 22.0
rect_min_size = Vector2( 31, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1

[node name="GreenRow" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 75.0
margin_right = 135.0
margin_bottom = 30.0
custom_constants/separation = 5

[node name="GreenIcon" type="TextureRect" parent="HBoxContainer/GreenRow"]
margin_right = 24.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="GreenLabel" type="Label" parent="HBoxContainer/GreenRow"]
margin_left = 29.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 22.0
rect_min_size = Vector2( 31, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1

[node name="OrangeRow" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 30.0
custom_constants/separation = 5

[node name="OrangeIcon" type="TextureRect" parent="HBoxContainer/OrangeRow"]
margin_right = 24.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="OrangeLabel" type="Label" parent="HBoxContainer/OrangeRow"]
margin_left = 29.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 22.0
rect_min_size = Vector2( 31, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
